# breakd

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md  config.example.toml  flake.nix  release-please-config.json
.github/workflows/: ci.yml  release-please.yml
crates/cli/: Cargo.toml
crates/config/: Cargo.toml
crates/config/src/: lib.rs  messages.rs
crates/coop/: Cargo.toml
crates/coop/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: coop.rs  lib.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: lib.rs
crates/platform-linux/: Cargo.toml
crates/platform-linux/assets/: 01-warm-rise.oga  02-soft-bloom.oga  03-deep-halo.oga  04-clean-chime.oga
crates/platform-linux/src/: clock.rs  event_sound.rs  hyprland.rs  idle.rs  lib.rs  logind.rs  notifications.rs  state_store.rs  wayland_probe.rs
crates/relay/: Cargo.toml
crates/relay/src/: main.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs
crates/settings/: Cargo.toml
crates/settings/src/: lib.rs
crates/tray/: Cargo.toml
crates/tray/src/: lib.rs
crates/wayland-overlay/: Cargo.toml
crates/wayland-overlay/src/: lib.rs
docs/: coop.md
packaging/: io.github.simonwinther.breakd.settings.desktop
packaging/arch/: .SRCINFO  PKGBUILD
packaging/nix/: module.nix  package.nix  relay.nix
packaging/systemd/: breakd-local.service  breakd.service
scripts/: breakd-dev  build-arch-package.sh  build-source-archive.sh  publish-aur.sh  sync-cargo-lock.sh
src/: main.rs
