[workspace]
members = [
  "crates/core",
  "crates/scheduler",
  "crates/config",
  "crates/ipc",
  "crates/platform-linux",
  "crates/wayland-overlay",
  "crates/daemon",
  "crates/cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.92"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
fs2 = "0.4"
glib = "0.22"
gtk4 = { version = "0.11", features = ["v4_18"] }
gtk4-layer-shell = { version = "0.8", features = ["v1_3"] }
humantime = "2.3"
nix = { version = "0.30", features = ["fs", "time", "user"] }
proptest = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.23"
thiserror = "2.0"
tokio = { version = "1.49", features = ["full"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.19", features = ["v4", "serde"] }
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "staging"] }
zbus = { version = "5.17", default-features = false, features = ["tokio"] }

[profile.release]
lto = "thin"
codegen-units = 1
panic = "unwind"
strip = "debuginfo"
