[package]
name = "breakd"
version = "0.1.6"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[workspace]
members = [
  "crates/core",
  "crates/scheduler",
  "crates/config",
  "crates/ipc",
  "crates/platform-linux",
  "crates/settings",
  "crates/tray",
  "crates/wayland-overlay",
  "crates/daemon",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.92"

[dependencies]
anyhow.workspace = true
breakd-config = { path = "crates/config" }
breakd-core = { path = "crates/core" }
breakd-daemon = { path = "crates/daemon" }
breakd-ipc = { path = "crates/ipc" }
breakd-settings = { path = "crates/settings" }
breakd-wayland-overlay = { path = "crates/wayland-overlay" }
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
fs2 = "0.4"
glib = "0.22"
gtk4 = { version = "0.11", features = ["v4_18"] }
gtk4-layer-shell = { version = "0.8", features = ["v1_3"] }
humantime = "2.3"
ksni = "0.3.5"
nix = { version = "0.30", features = ["fs", "time", "user"] }
proptest = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.23"
thiserror = "2.0"
tokio = { version = "1.49", features = ["full"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.19", features = ["v4", "serde"] }
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "staging"] }
zbus = { version = "5.17", default-features = false, features = ["tokio"] }

[profile.release]
lto = "thin"
codegen-units = 1
panic = "unwind"
strip = "debuginfo"
