[package]
name = "breakd"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
breakd-config = { path = "../config" }
breakd-core = { path = "../core" }
breakd-daemon = { path = "../daemon" }
breakd-ipc = { path = "../ipc" }
breakd-wayland-overlay = { path = "../wayland-overlay" }
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
