[package]
name = "breakd-coop"
version = "0.1.12"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
breakd-core = { path = "../core" }
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true
