[package]
name = "breakd-daemon"
version = "0.1.11"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
breakd-coop = { path = "../coop" }
breakd-config = { path = "../config" }
breakd-core = { path = "../core" }
breakd-ipc = { path = "../ipc" }
breakd-platform-linux = { path = "../platform-linux" }
breakd-scheduler = { path = "../scheduler" }
breakd-tray = { path = "../tray" }
futures-util.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite = { workspace = true, features = ["connect", "rustls-tls-webpki-roots"] }
tracing.workspace = true
uuid.workspace = true
