[package]
name = "breakd-platform-linux"
version = "0.1.8"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
breakd-core = { path = "../core" }
breakd-scheduler = { path = "../scheduler" }
futures-util.workspace = true
nix.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
wayland-client.workspace = true
wayland-protocols.workspace = true
zbus.workspace = true

[dev-dependencies]
breakd-config = { path = "../config" }
tempfile.workspace = true
