[package]
name = "breakd-relay"
version = "0.1.11"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
breakd-coop = { path = "../coop" }
clap.workspace = true
futures-util.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite = { workspace = true, features = ["handshake"] }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
breakd-core = { path = "../core" }
