[package]
name = "breakd-scheduler"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
breakd-core = { path = "../core" }
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
breakd-config = { path = "../config" }
proptest.workspace = true

