[package]
name = "breakd-scheduler"
version = "0.1.7"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
breakd-core = { path = "../core" }
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
breakd-config = { path = "../config" }
proptest.workspace = true
serde_json.workspace = true
