[package]
name = "breakd-settings"
version = "0.1.11"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
breakd-config = { path = "../config" }
breakd-core = { path = "../core" }
breakd-ipc = { path = "../ipc" }
glib.workspace = true
gtk4.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
