[package]
name = "breakd-wayland-overlay"
version = "0.1.9"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
breakd-config = { path = "../config" }
breakd-core = { path = "../core" }
breakd-platform-linux = { path = "../platform-linux" }
glib.workspace = true
gtk4.workspace = true
gtk4-layer-shell.workspace = true
tokio.workspace = true
tracing.workspace = true
